<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textfield.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/etNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/fecha_nacimiento"
        android:textSize="@dimen/textoDimension"
        />

    <DatePicker
        android:id="@+id/dpFecha"
        android:background="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:datePickerMode="spinner">

    </DatePicker>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        />
    <EditText
        android:id="@+id/etDescripcionContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_contacto"
        android:layout_marginBottom="@dimen/vertical_margin"
        />
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_siguiente"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBlanco"
        />
</com.google.android.material.textfield.TextInputLayout>
